--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mippy</title>
   </head>
   <body>
-    <h1 class="is-title is-1 has-text-centered">
+    <h1 class="title is-1 has-text-centered mt-2">
       Mippy : générer une phrase de passe
     </h1>
     <img src="xkcd.png" alt="Image XKCD mot de passe" />
