--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Mippy</title>
   </head>
-  <body>
+  <body class="container">
     <h2 class="subtitle is-1 has-text-centered mt-4">
       Générer une phrase de passe
     </h2>
@@ -53,8 +53,10 @@
         </div>
       </div>
     </div>
-    <div class="column is-centered">
-      <img src="xkcd.png" alt="Image XKCD mot de passe" />
+    <div class="columns is-centered">
+      <div class="column">
+        <img src="xkcd.png" alt="Image XKCD mot de passe" />
+      </div>
     </div>
   </body>
   <script src="generator.js"></script>
