fix number at the end

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       La petite bande-dessinée ci-dessous explique l'intérêt d'une phrase de
       passe.
     </p>
-    <figure class="image container mt-5" style="width: 70vw">
+    <figure class="image container mt-5" style="width: 60vw; height: auto">
       <img src="xkcd.png" alt="Image XKCD mot de passe" />
     </figure>
   </body>
