--- a/index.html
+++ b/index.html
@@ -69,8 +69,12 @@
       La petite bande-dessinée ci-dessous explique l'intérêt d'une phrase de
       passe.
     </p>
-    <figure class="image container mt-5" style="width: 60vw; height: auto">
-      <img src="xkcd.png" alt="Image XKCD mot de passe" />
+    <figure class="image container mt-5">
+      <img
+        src="xkcd.png"
+        alt="Image XKCD mot de passe"
+        style="width: 60vw; height: auto"
+      />
     </figure>
   </body>
   <script src="generator.js"></script>
