--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       Générer une phrase de passe
     </h2>
     <h1 class="title is-1 has-text-centered mt-5 mb-5" id="password"></h1>
-    <div class="columns mt-5 is-vcentered">
+    <div class="columns mt-5 is-vcentered has-text-centered-mobile">
       <div class="column is-3">
         <label class="label">Format des lettres</label>
         <div class="select">
