--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
       La petite bande-dessinée ci-dessous explique l'intérêt d'une phrase de
       passe.
     </p>
-    <figure class="image container mt-5">
+    <figure class="image container mt-5 is-flex is-horizontal-center">
       <img
         src="xkcd.png"
         alt="Image XKCD mot de passe"
-        style="width: 60vw; height: auto"
+        style="width: 60%; height: auto"
       />
     </figure>
   </body>
