--- a/index.html
+++ b/index.html
@@ -69,11 +69,17 @@
       La petite bande-dessinée ci-dessous explique l'intérêt d'une phrase de
       passe.
     </p>
-    <figure class="image container mt-5 is-flex is-horizontal-center">
+    <figure class="image container mt-5">
       <img
         src="xkcd.png"
         alt="Image XKCD mot de passe"
-        style="width: 60%; height: auto"
+        style="
+          width: 60%;
+          height: auto;
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+        "
       />
     </figure>
   </body>
